<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".birdInfo">

    <!-- First ImageView -->

    <!-- Second ImageView -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:contentDescription="bird_image"
        android:scaleType="centerCrop"
        android:src="@drawable/mordecai" />

    <ImageView
        android:id="@+id/rangeMap"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_toEndOf="@id/imageView"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@id/imageView"
        android:scaleType="centerCrop"
        android:contentDescription="range_map"
        android:src="@drawable/mordecai" />

    <TextView
        android:id="@+id/birdName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/birdInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birdName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/editableBirdInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/birdInfo"
        android:layout_marginTop="10dp"
        android:visibility="gone" />
    <Button
        android:id="@+id/birdCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Play Bird Call" />
    <Button
        android:id="@+id/researcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birdCall"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Toggle Text Box" />
    <Button
        android:id="@+id/modBird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/researcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Modify Bird" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birdInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Back_to_dashboard" />

</RelativeLayout>
